--- a/src/app/protected/cranix/calendar/calendar.component.html
+++ b/src/app/protected/cranix/calendar/calendar.component.html
@@ -18,7 +18,7 @@
                             @if(selectedEvent.id){
                             <ion-button class="ion-no-margin" (click)="deleteEvent()"
                                 [disabled]="!addEditEventForm.valid">
-                                <ion-icon slot="icon-only" color="error" name="trash"></ion-icon>
+                                <ion-icon slot="icon-only" color="danger" name="trash"></ion-icon>
                             </ion-button>
                             }
                             }
