--- a/src/app/protected/cranix/calendar/calendar.component.html
+++ b/src/app/protected/cranix/calendar/calendar.component.html
@@ -1,7 +1,9 @@
 <!-- cranix-toolbar title="{{'Calendar' | translate}}"></cranix-toolbar -->
 <cranix-toolbar title="Calendar"></cranix-toolbar>
 <ion-content>
-    <full-calendar #calendar [options]="calendarOptions" [events]="events"></full-calendar>
+    <full-calendar #calendar [options]="calendarOptions" [events]="events">
+        
+    </full-calendar>
     <ion-modal #addEditEventModal [isOpen]="isModalOpen">
         <ng-template>
             @if(selectedEvent){
@@ -68,10 +70,10 @@
                         </ion-item>
                         }
                         <ion-item>
-                            <ion-label>{{'Groups for the Event' | translate}}</ion-label>
+                            <ion-label>{{'Select groups for the event' | translate}}</ion-label>
                             <ionic-selectable #ionicSelectGroups itemValueField="id" itemTextField="description"
                                 [isMultiple]="true" [(ngModel)]="selectedEvent.groups"
-                                [ngModelOptions]="{standalone: true}" [items]="calendars" [canSearch]="true">
+                                [ngModelOptions]="{standalone: true}" [items]="myGroups" [canSearch]="true">
                                 <ng-template ionicSelectableHeaderTemplate>
                                     <ion-header color="primary">
                                         <ion-toolbar>
@@ -94,7 +96,7 @@
                             </ionic-selectable>
                         </ion-item>
                         <ion-item>
-                            <ion-label>{{'Users for the event' | translate}}</ion-label>
+                            <ion-label>{{'Select users for the event' | translate}}</ion-label>
                             <ionic-selectable #ionicSelectUsers itemValueField="id" itemTextField="fullName"
                                 [isMultiple]="true" [(ngModel)]="selectedEvent.users"
                                 [ngModelOptions]="{standalone: true}" [items]="objectService.allObjects['user']"
@@ -117,6 +119,28 @@
                                     <div class="ionic-selectable-value-item">
                                         {{ports.length}} {{'users are seleceted'|translate}}
                                     </div>
+                                </ng-template>
+                            </ionic-selectable>
+                        </ion-item>
+                        <ion-item>
+                            <ion-label>{{'Select room for the event' | translate}}</ion-label>
+                            <ionic-selectable #ionicSelectRoom itemValueField="id" itemTextField="description"
+                                [isMultiple]="false" [(ngModel)]="selectedEvent.room"
+                                [ngModelOptions]="{standalone: true}" [items]="objectService.allObjects['room']"
+                                [canSearch]="true">
+                                <ng-template ionicSelectableHeaderTemplate>
+                                    <ion-header color="primary">
+                                        <ion-toolbar>
+                                            <ion-title>
+                                                {{ "Select room for the event" | translate }}
+                                            </ion-title>
+                                            <ion-buttons slot="end">
+                                                <ion-button ion-button (click)="ionicSelectRoom.close()">
+                                                    <ion-icon color="danger" name="close"></ion-icon>
+                                                </ion-button>
+                                            </ion-buttons>
+                                        </ion-toolbar>
+                                    </ion-header>
                                 </ng-template>
                             </ionic-selectable>
                         </ion-item>
@@ -157,12 +181,87 @@
                         </ion-item>
                         <ion-item>
                             <ion-label>{{'End Date'|translate}}*</ion-label>
-                            <input [(ngModel)]="rRule.until" name="endTime" type="date" required />
+                            <input [(ngModel)]="rRule.until" name="endTime" type="date" [disabled]="!eventRecurring"/>
                         </ion-item>
                     </ion-list>
                 </ion-content>
             </form>
             }
+        </ng-template>
+    </ion-modal>
+    <ion-modal #selectCalendar [isOpen]="isCalendarModalOpen">
+        <ng-template>
+            <ion-header color="primary">
+                <ion-toolbar color="primary">
+                    <ion-title>{{'Select Calendars to show'|translate}}</ion-title>
+                    <ion-buttons slot="end">
+                        <ion-button fill="clear" size="small" (click)="isCalendarModalOpen = false">
+                            <ion-icon slot="icon-only" color="danger" name="close"></ion-icon>
+                        </ion-button>
+                    </ion-buttons>
+                </ion-toolbar>
+            </ion-header>
+            <ion-content>
+                <ion-list>
+                    <ion-item>
+                        <ion-label>
+                            {{'If no items are seleceted all events are showed'|translate}}
+                        </ion-label>
+                    </ion-item>
+                    <ion-item>
+                        <ion-label>{{'Select groups calendars' | translate}}</ion-label>
+                        <ionic-selectable #ionicSelectGroups itemValueField="id" itemTextField="description" [isMultiple]="true"
+                            [(ngModel)]="selectedGroups" [ngModelOptions]="{standalone: true}" [items]="myGroups"
+                            [canSearch]="true">
+                            <ng-template ionicSelectableHeaderTemplate>
+                                <ion-header color="primary">
+                                    <ion-toolbar>
+                                        <ion-title>
+                                            {{ "Select groups calendars to show" | translate }}
+                                        </ion-title>
+                                        <ion-buttons slot="end">
+                                            <ion-button ion-button (click)="ionicSelectGroups.close()">
+                                                <ion-icon color="danger" name="close"></ion-icon>
+                                            </ion-button>
+                                        </ion-buttons>
+                                    </ion-toolbar>
+                                </ion-header>
+                            </ng-template>
+                            <ng-template ionicSelectableValueTemplate let-ports="value">
+                                <div class="ionic-selectable-value-item">
+                                    {{ports.length}} {{'groups are seleceted'|translate}}
+                                </div>
+                            </ng-template>
+                        </ionic-selectable>
+                    </ion-item>
+                    <ion-item>
+                        <ion-label>{{'Select room calendars' | translate}}</ion-label>
+                        <ionic-selectable #ionicSelectUsers itemValueField="id" itemTextField="description" [isMultiple]="true"
+                            [(ngModel)]="selecetedRooms" [ngModelOptions]="{standalone: true}"
+                            [items]="objectService.allObjects['room']" [canSearch]="true">
+                            <ng-template ionicSelectableHeaderTemplate>
+                                <ion-header color="primary">
+                                    <ion-toolbar>
+                                        <ion-title>
+                                            {{ "Select room calendars to show" | translate }}
+                                        </ion-title>
+                                        <ion-buttons slot="end">
+                                            <ion-button ion-button (click)="ionicSelectUsers.close()">
+                                                <ion-icon color="danger" name="close"></ion-icon>
+                                            </ion-button>
+                                        </ion-buttons>
+                                    </ion-toolbar>
+                                </ion-header>
+                            </ng-template>
+                            <ng-template ionicSelectableValueTemplate let-ports="value">
+                                <div class="ionic-selectable-value-item">
+                                    {{ports.length}} {{'rooms are seleceted'|translate}}
+                                </div>
+                            </ng-template>
+                        </ionic-selectable>
+                    </ion-item>
+                </ion-list>
+            </ion-content>
         </ng-template>
     </ion-modal>
 </ion-content>
