--- a/src/app/shared/actions/setpassword/setpassword.component.html
+++ b/src/app/shared/actions/setpassword/setpassword.component.html
@@ -18,14 +18,14 @@
     <ion-list>
       <ion-item>
         <ion-label position="stacked">{{'New password' | translate}}</ion-label>
-        <ion-input [type]="showPassword ? 'text' : 'password'" [(ngModel)]="setPassword.password" name="password" required>
+        <ion-input type="password" [(ngModel)]="setPassword.password" name="password" required>
+		<ion-input-password-toggle slot="end"></ion-input-password-toggle>
         </ion-input>
-        <ion-icon slot="end" [color]="showPassword ? 'primary' : 'medium'" name="eye-off" (click)="showPassword = !showPassword">
-        </ion-icon>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{'Repeat new password' | translate}}</ion-label>
-        <ion-input [type]="showPassword ? 'text' : 'password'" [(ngModel)]="setPassword.password2" name="password2" required>
+        <ion-input type="password" [(ngModel)]="setPassword.password2" name="password2" required>
+		<ion-input-password-toggle slot="end"></ion-input-password-toggle>
         </ion-input>
       </ion-item>
       <ion-item *ngIf="!type">
