--- a/src/app/protected/cranix/softwares/packages/software-packages.component.html
+++ b/src/app/protected/cranix/softwares/packages/software-packages.component.html
@@ -21,7 +21,7 @@
   <ion-toolbar class="page-toolbar">
     <ion-item lines="none">
       <ion-label *ngIf="gridApi">
-        #{{gridApi.getDisplayedRowCount()}}
+        #{{gridApi.getDisplayedRowCount()}}&nbsp;
       </ion-label>
       <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('softwareFilter')"
         id="softwareFilter">
