--- a/src/app/protected/cephalix/customers/edit-institutes.html
+++ b/src/app/protected/cephalix/customers/edit-institutes.html
@@ -22,7 +22,7 @@
 <ion-content>
     <ion-item>
         <ion-label *ngIf="gridApi">
-            #{{gridApi.getDisplayedRowCount()}}
+            #{{gridApi.getDisplayedRowCount()}}&nbsp;
         </ion-label>
         <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()"
             id="instituteFilter">
