--- a/src/app/protected/cranix/rooms/lists/rooms.component.html
+++ b/src/app/protected/cranix/rooms/lists/rooms.component.html
@@ -2,7 +2,7 @@
 <ion-toolbar *ngIf="!authService.isMD()" class="page-toolbar">
   <ion-item lines="none">
     <ion-label *ngIf="gridApi">
-      #{{gridApi.getDisplayedRowCount()}}
+      #{{gridApi.getDisplayedRowCount()}}&nbsp;
     </ion-label>
     <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('roomsFilter')" id="roomsFilter">
     </ion-input>
