--- a/src/app/protected/cranix/devices/lists/devices.component.html
+++ b/src/app/protected/cranix/devices/lists/devices.component.html
@@ -4,7 +4,7 @@
 <ion-toolbar *ngIf="!authService.isMD()" class="page-toolbar">
   <ion-item lines="none">
     <ion-label *ngIf="gridApi">
-      #{{gridApi.getDisplayedRowCount()}}
+      #{{gridApi.getDisplayedRowCount()}}&nbsp;
     </ion-label>
     <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('devicesFilter')"
       id="devicesFilter">
