Inital version of PTM handling

--- a/src/theme/cranix-custom.scss
+++ b/src/theme/cranix-custom.scss
@@ -24,6 +24,13 @@
 }
 
 /*
+* Ich möchte die Zahlen auf der Rechte seite haben.
+*/
+ion-input.number {
+  text-align: right;
+}
+
+/*
 * Ein anderes lookout 
 */
 .upload-btn-wrapper {
