--- a/src/app/protected/edu/lessons/lessons.page.html
+++ b/src/app/protected/edu/lessons/lessons.page.html
@@ -16,5 +16,9 @@
       <ion-icon name="calendar"></ion-icon>
       <ion-label>{{ 'Security' | translate }}</ion-label>
     </ion-tab-button>
+    <ion-tab-button *ngIf="authS.isOneOfAllowed(['ptms.manage','ptms.use'])" tab="ptms">
+      <ion-icon name="calendar"></ion-icon>
+      <ion-label>{{ 'Security' | translate }}</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
